ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    name: backend-ingress
spec:
  rules:
    - host: oscar.app.br
      http:
        paths:
          - backend:
              serviceName: backend-service
              servicePort: 80
    - host: frontend.oscar.app.br
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
